	PR debug/42715 	* var-tracking.c (use_type): Choose MO_VAL_SET for REGs set 	without a cselib val. 	(count_uses): Accept MO_VAL_SET with no val on stores. 	(add_stores): Likewise.

* gcc.dg/pr42715.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156102 138bc75d-0d04-0410-961f-82ee72b054a4